# ChangeLog for net-wireless/chirp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/chirp/ChangeLog,v 1.4 2013/02/09 23:36:43 zerochaos Exp $

*chirp-0.3.0 (09 Feb 2013)

  09 Feb 2013; Rick Farina <zerochaos@gentoo.org> +chirp-0.3.0.ebuild,
  chirp-9999.ebuild:
  bump

  30 Nov 2012; Rick Farina <zerochaos@gentoo.org> chirp-0.2.3.ebuild:
  disable missing tests for release version

  10 Oct 2012; Rick Farina <zerochaos@gentoo.org> chirp-0.2.3.ebuild,
  chirp-9999.ebuild:
  recent ebuild cleanup seems to have left out SRC_URI... fixed

*chirp-0.2.3 (08 Sep 2012)
*chirp-9999 (08 Sep 2012)

  08 Sep 2012; Rick Farina <zerochaos@gentoo.org> +chirp-0.2.3.ebuild,
  +chirp-9999.ebuild, +metadata.xml:
  initial commit of chirp, thanks to xarthisius for reviewing my terrible python
  ebuild