@@ -3,25 +3,27 @@ Hash: SHA512
 
 DIST chirp-0.2.3.tar.gz 176249 SHA256 ff278c1abc828ac3f553253cf29e3d854c80087794c6f48c14712c681751c161 SHA512 63287c5baad34768804dc82fb4852ea42080a3156651e1ef304fda9d499aa462427dd1a58cddfd733762b6897ac01d3d1fdd982c68283da3af54aadd5bba4010 WHIRLPOOL 3e6449879d7c500e5d944b25ef66c5239c72ba06c5ef105d5414ea4b8f1841fbe83426a2c70c9751edba7107f13c66c5161a7a82f684f5c210e8c56b90396b4d
 DIST chirp-0.3.0.tar.gz 279241 SHA256 8499d48460e56c93fb86f75b5c917e820fce1c92ca8af9928117d5aa19ae0afb SHA512 3515df8d67def3e805db987fb788fabe09faa9ac28ea1913a275898d1b015fb4b22d4aadd54301fe0f6df58677e0b5666a7a502699f95021303cc75921bc785e WHIRLPOOL 8349e2b38a11395933f30f3ec9826f47d3a6d9c6137ccd28a3ae2a13a709c1148b372e373b750c99c315ee8679a4f7480b16a2c6c3123aef1b19d5a2f28c6d91
+DIST chirp-0.4.0.tar.gz 416572 SHA256 8b45a70db6dcb6fb147017f71875fde3187c48df4c9b7d82773c215e92a3e497 SHA512 553981f3dae3b691710f05ae41c909ea437bb9a40fe5380acab1a3e556aef65e52ba6f27ca3e8ed549447fd0813f5baebc6b888d8b5a75f6e0243b6cbbf0c8e9 WHIRLPOOL fb3258283748693a55917b1773fa9f1f440ba6ad6d2751f6620d45cd12f224661e9a9283c6b714116fb77bd95d8fc9099e61ecd3fa3a3afd623cb7816231a9b2
 EBUILD chirp-0.2.3.ebuild 935 SHA256 faf3c8f7cec386425e39cd8cb7779c391534a432728093b0bab0e0a20acd31d7 SHA512 4067dc75a0cf48ff8683ba6423e10869166d924f5db68cb39b98c9c86e213039df9146877eba017690323b36f12ce063f6970748092aa3ec99f2ce99da63eb4e WHIRLPOOL 760759c5d118a8ca6fd64fee91a2ceb0e164ba06cfc20fb3ea844d4f96438a7394146cb2a590bc47005f16c9e82214cb0598137e6995b7c5f9a56159dfe1897d
 EBUILD chirp-0.3.0.ebuild 935 SHA256 4d4d1c5c99ea8706928e8057309d6a097acfac6c63ea30304c6957d35786f862 SHA512 814deed1c92f163fa7e389604d2732ea8d2f2a955c2561813f81843be9cdf88b76a1ebe0349896d9bd37a6ea0dcc30a3daa79378b819811c81071b25fe2a451e WHIRLPOOL f84a48fe145902ba32d9f339c47b7f26c49ae688640569ddcc616bc2b9589393317a35b0e7d786977f85237b116d159eb231ca1a8f26115ed82a3e85a6325f38
-EBUILD chirp-9999.ebuild 1077 SHA256 86df38dbfdf01c1964f3e91cdd022a3d9efe3bcab1b6e2e90ea8a92401564e2c SHA512 e58cf8216efaca8a14bd436148c53f15aad28be0832e04e1519f5f3ec57b0367ad2c3303ea2fc1658ae8ffef99141895541a56996ff76abcd3179a6a6932d095 WHIRLPOOL 439561d4680c9f5747c3aacfac2189e33a7b623ebb0fd71e079d1f241fdcb0c1556e47652ce82b3d9276637291078b409786638b89716d9e2825b7a1ac5c7a95
-MISC ChangeLog 863 SHA256 86a372209db425f4589528b0c18966c8bb443d976f0a518eb2a170996ad171cb SHA512 b2c27b6839c3152dbf17e4180f682550f6242351e581d1006f21fc79be757f5c683c0ad7bb4d51a583565f2dbac4cd9390e4fe9b016a478e28f5901de03f14b9 WHIRLPOOL 91f8a09f51e46ad62f90109226dfff8097b40e6d05c5c0d04cf2ac6552e1efeca70dff8021eb9e654fff94f10e4f3b63739d33e153fa118d93bb9981f709d894
+EBUILD chirp-0.4.0.ebuild 873 SHA256 338a79b28c436ff5705eb745834972dcf3947998eaca667af3b130a3bdcb9a94 SHA512 6b8750f59a9b66806e9a3c6707353a4930fa6522b471591fbcdafec72572e3f2b8c0c39ab9a16e927053aa701196b17c0eda566c41029d5b4d0db3f174bdbd75 WHIRLPOOL b1ac49784cb04e056790ae42ede73da7d3bf1def5b99888c8b886ba768b3c6345131c2d5b3c8ecc6d74cf8c265f947e8b60ca9281fb76b1e54d90d40e3d8d778
+EBUILD chirp-9999.ebuild 950 SHA256 22a2de4b619288d9b9b3560145ce57ada3a6d5bba266e8f501307f56864efc7f SHA512 cf39a9b420a3f9706b8264adb0e2d0b49bd5dbf0c8fd501cb03e85e61cf96eb613a1b06f5388125400f28fdd1efe0fcd3d8aff01d92bc32521ff72565fb65e58 WHIRLPOOL 017c96054fa21824d1207f695f4493c3a45bf556b547f58cfb6760a6293113f17ae4b671699ce5b4d37d6797b3ed6785974a48d8b853f8fad44bb004ff1e4c81
+MISC ChangeLog 1021 SHA256 1312a83f087ef0de969b5d523d3cba4b84158e29ca27dbd24b0bf7eb8aa7701a SHA512 4518d3d4328d788e1d4e7ce2ee60216992d7ef1aa19832bc10bba34d4da3a96ea8c41dc0fb74f2f3f497db38f2fa8dc75adc1496ac9b9597edcc634e19cc2f79 WHIRLPOOL c19e6318a1f87ee13ad1cda022fa5cbb434409c58562a33dcaea2761b1df9bb4e0107c7d075a3b12eff394658cf77e3210c51e98fe02bb061bb747b75a0ef0fd
 MISC metadata.xml 296 SHA256 5f05908fd92afd7e7bbbc1eca7a7251a783f381fd6fffbde25dd8514d27a0fc2 SHA512 b35a8935028bb79974ce95950ccff8126cd6cae56babbf9f4e78057addc7fd46e88c360427a3f1034d4789b2758de7382eaeb721b676b9f2d07bdeadbeae01cc WHIRLPOOL cce56133bbed06d2abf31898d7cd4b334bc4343ba64fa1e5cf96e7fe9c0303fe3ca5381b9d731086af49f8ea978462ffd73b7459982302eb6fde8edcb89648cf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRFt2hAAoJEKXdFCfdEflKDIUP/AiZBV33AOVupNOOrfAd53e8
-O95EDpHFYCv6+uT/gYWrxS/MxyChLZ76o1miBm1vpeRAzwyePJ9SF4StM3xjkvX7
-w1f7qgHqpEIkhBx4iBsi8ZYe21PAfdh1hMr9eN5NsiTvdGhj1iaxg39/jrbcRwzm
-onk2dRZVozan4OkSIc9O6HKaAwOSUzQtrH6hLAHNgTHz+BUEqVTYwn/E9nZAiJwO
-jADOkwjwcdFpPo9RcN/TKhh1sc9Ao6i5BWocwDfLx8zWPwMB6BBsZpVwzyNO5dJW
-xw/FzrqBoakOi5PDk6x/HTFhaTrOWnm+Wn0W0PNzMTfDgo9VIjqwIDWVSA1cOTI9
-BC3UkGTNtbpYgjYcMbGiJCe1jsvMygGq6gtPYodCqFiJ+A+sRI7IKwTOz85ziOhM
-VjezebUgbAMmP/aTs54ClganZXu/11m5vxj0IsPKyqgCeyzlvXAiiR3vQtNAeY5S
-VODLFBCQCHNZZTfmgUUl2wOKz/iJxcJk3HlezUIoq/dH3sVDi/FM3GxzQsiggZey
-s/07Hmvla5Jxec0xwX0kHstMS9JxY/wRDaG9dVT9H1RLwi7q8/PXcFwvcuIgpTqp
-pjKAI7w/3xKxSS/dp6HYP41BLW0nGerFwtN8NmrQKf/L4fmMslib9+AvGHeBVZ9g
-8VhCiRO4EIQXdcDwl4LK
-=vfcl
+iQIcBAEBCgAGBQJTMj4uAAoJEKXdFCfdEflKsrcP/ApzKxMXY+UDyMDPkD/7QCV3
+I1TvdrQwR2d7LmN3V3ADqDAwI2tFCSltpU3cFZuA9Dar2sfNV/qLqlN8j013TA25
+ifE2K3HXsrBWW+o8BskagF9Q2uVNrLiTdA+aR7ogmJJWlpThs8ABRuj7HWAL3T0V
+G9QPTtSzCW7Z6J4l2MT/1Fci9/Bwepmf59R0W+WSQSwLr4YOo+W0qIASuv8vkqpy
+6x45ejyTEl4bAibNCU6uKH9NXYxYAic3XO342a/0ZfeDc15zMyt8ENoIBFKbx1qy
+7IjncEWGF1qcehomJ3tqoGbL/l7hetnHnrYfz9TNCtqId2xJpMbBJk5VVyh4eW66
+9MXshd3b/4oUnsu8qiH7M/fHX6FBynTLNAhD2FgqHjjK+Hv8js/cHT4YYTuERQ6g
+HUbc7t7rwyBzH9LS43Rwd8t9On3SaC3eTg0jX14RyJFAGEtkC3FCda8ejfEgKnVe
+cMwrm7O+VvBVKJW3+cUhEyp1M56+kZ+B7RV6gpXunBcCg0NhZZb//ydYhIv59ijA
+8o6AFCNbgugWhJtGT1EMgLqAuuVjI1VReb6jbIw8PPOH4LnC8XRK5mlkIyu/lkGb
+iix7GDEqUhFTjjiU4YA7QoI24xdTHSrY5/O02w3PZN9+tz+2DXxRUEmNt8qEPtA+
+1XCAR91mZmvyDpWUaQOj
+=fZI3
 -----END PGP SIGNATURE-----
