@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/chirp
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/chirp/ChangeLog,v 1.4 2013/02/09 23:36:43 zerochaos Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/chirp/ChangeLog,v 1.5 2014/03/26 02:39:15 zerochaos Exp $
+
+*chirp-0.4.0 (26 Mar 2014)
+
+  26 Mar 2014; Rick Farina <zerochaos@gentoo.org> +chirp-0.4.0.ebuild,
+  chirp-9999.ebuild:
+  bump and distutils->-r1 conversion
 
 *chirp-0.3.0 (09 Feb 2013)
 
